--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amor portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Amor Krishna</span> Portfolio!</h1>
+            <h3>The responsibilities of a web developer</h3>
+            <p>A web developer designs, develops, enhances, tests and deploys web applications with an end goal of
+                creating
+                engaging and user-friendly site layout and function. A developer gathers and defines requirements,
+                maintains
+                websites, troubleshoots and fixes bugs, follows best practices and collaborates with other teams.
+            </p>
+            <a class="link-button" target="_blank" href="https://github.com/Amornath30">HIRE ME</a>
+
+        </div>
+        <div class="half-width">
+            <img src="images/jhankar.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
