--- a/index.html
+++ b/index.html
@@ -41,24 +41,25 @@
             <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
                 to make simple website. My goal is to build 3 websites and learn advanced topics..
             </p>
-            <a href="_blank" DOWNLOAD RESUME"></a>
+            <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
         </div>
     </section>
     <section class="experience-area">
      <h1>Experience</h1>
      <div class="flexable-container">
-        <div class="half-width">
-            <h1>Full Stack Developer</h1>
-            <h3>2022-Present | Pro Level Developer</h3>
+        <div id="full-stack-experience" class="experience-item">
+            <h2>Full Stack Developer</h2>
+            <h3 class="orange-color">2022-Present | Pro Level Developer</h3>
             <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
         </div>
-        <div class="half-width">
-            <h1>Baby Web Developer</h1>
-            <h3>2022-2024 | Programming Hero Learner</h3>
+        <div id="web-dev-experience" class="experience-item">
+            <h2>Front_End  Web Developer</h2>
+            <h3 class="orange-color">2022-2024 | Programming Hero Learner</h3>
             <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
         </div>
      </div>
     </section>
+    <footer><p>© Peter Parker 2021, a Programming Hero initiative.</p></footer>
 </body>
 
 </html>
