--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 
         </div>
         <div class="half-width">
-            <img src="images/jhankar.png" alt="">
+            <img src="images/my1-bg.png" alt="">
         </div>
     </section>
     <section class="dream-big flexable-container">
         <div class="half-width">
-            <img src="images/jhankar2.png" alt="">
+            <img src="images/my2-bg2.png" alt="">
         </div>
         <div class="half-width">
             <h1>Dream Big</h1>
@@ -45,21 +45,27 @@
         </div>
     </section>
     <section class="experience-area">
-     <h1>Experience</h1>
-     <div class="flexable-container">
-        <div id="full-stack-experience" class="experience-item">
-            <h2>Full Stack Developer</h2>
-            <h3 class="orange-color">2022-Present | Pro Level Developer</h3>
-            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        <h1>Experience</h1>
+        <div class="flexable-container">
+            <div id="full-stack-experience" class="experience-item">
+                <h2>Full Stack Developer</h2>
+                <h3 class="orange-color">2022-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="web-dev-experience" class="experience-item">
+                <h2>Front_End Web Developer</h2>
+                <h3 class="orange-color">2021-2022 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+                </p>
+            </div>
         </div>
-        <div id="web-dev-experience" class="experience-item">
-            <h2>Front_End  Web Developer</h2>
-            <h3 class="orange-color">2022-2024 | Programming Hero Learner</h3>
-            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
-        </div>
-     </div>
     </section>
-    <footer><p>© Peter Parker 2021, a Programming Hero initiative.</p></footer>
+    <footer>
+        <p>© Amor Krishna Nath 2022, a Programming Hero initiative.</p>
+    </footer>
 </body>
 
 </html>
